Fixed scrollbar trough in backdrop state

--- a/gtk-3.0/gtk-widgets-backdrop.css
+++ b/gtk-3.0/gtk-widgets-backdrop.css
@@ -169,6 +169,16 @@ GtkIconView.view.cell:selected:focus:backdrop {
                                      to (shade(@theme_bg_color, 0.95)));
 }
 
+/*************
+ * scrollbar *
+ *************/
+.scrollbar.trough:backdrop {
+    border-width: 0;
+    border-radius: 0;
+    background-image: none;
+    background-color: @theme_bg_color;
+}
+
 /**********
  * switch *
  **********/
